2019-11-27 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Integral of a^(b*x)*c^(-d*x^2)
	* Improve handling of definite integrals with abs()
	* Fix definite integral for ln(abs(ax^b+c)) where and ax^b+b=0 and a*x^b is not an integer for lower or upper limit of x (0*infinity in result)

2019-11-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Innumerous integration enhancements and fixes
	* Fix begin temporary enable interval arithmetic without end (fixes some equations after exact mode has been disabled)
	* Improve solution tests
	* Use local instead of global buffer for i2s() and similar
	* Include uncertainty() function when replacing function arguments and where replacements with variables

2019-11-23 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix infinity^x=a (x != log(a, infinity))
	* Fix interval replacement with variable in exact mode

2019-11-22 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix incorrect solutions to equations not removed

2019-11-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Circular mil units (cmil and kcmil/MCM)
	* American wire gauge (awg) functions (area and diameter)

2019-11-16 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Remove "using namespace std" from header files

2019-11-13 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix ending zeroes and min decimals for approximate rational numbers
	* Improved output of significant figures for number intervals in some cases

2019-11-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Calculate uncertainty propagation, using variance formula, separately for imaginary and real numbers
	* Numerous improvements/fixes for integrals

2019-11-08 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not automatically recalculate expressions with answer variables when calculation/parsing mode has changed (CLI)

2019-11-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* sinh(i*x)=i*sin(x), cosh(i*x)=cos(x), tanh(i*x)=i*tan(x)
